2013-08-09  Christian Weiske  <christian.weiske@netresearch.de>

	* Fix fatal error on TYPO3 6.2

2013-06-03  Christian Weiske  <christian.weiske@netresearch.de>

	* First public version with Domain, GetParam, IP, Combination support
	* Version 0.2.0

2013-01-30  Christian Opitz  <christian.opitz@netresearch.de>

	* Initial code generated with kickstarter