@@ -1,3 +1,7 @@
+2013-08-16  Andre Hähnel  <andre.haehnel@netresearch.de.de>
+
+	* TYPOC-34: Support "extend to subpages" in 4.7, 6.0, 6.1 and 6.2
+
 2013-08-09  Christian Weiske  <christian.weiske@netresearch.de>
 
 	* Fix fatal error on TYPO3 6.2
